# saidit

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
authorization_app/: forms.py  views.py
config/: settings.py  urls.py
group/: admin.py  forms.py  models.py  views.py
group/migrations/: 0001_initial.py  0002_subgroup_created_by.py  0002_subgroup_member.py  0003_remove_subgroup_member.py  0004_subgroup_member.py  0005_alter_subgroup_member.py  0006_remove_subgroup_member.py
posts/: admin.py  forms.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0002_post_user.py  0002_the_groups.py
reply/: admin.py  forms.py  models.py  views.py
reply/migrations/: 0001_initial.py  0002_initial.py  0002_reply_replied_to.py  0003_alter_reply_reply_text.py  0003_auto_20211011_0351.py  0004_alter_reply_reply_text.py
saidituser/: admin.py  apps.py  forms.py  models.py  views.py
saidituser/migrations/: 0001_initial.py  0002_auto_20211005_1658.py  0002_saidituser_following.py  0002_saidituser_member.py  0003_alter_saidituser_bio.py  0003_remove_saidituser_member.py  0004_saidituser_member.py
static/css/: style.css
submission_posts/: apps.py  models.py
submission_posts/migrations/: 0001_initial.py
templates/: 500.html  addgroup.html  addpost.html  followers_list.html  following_list.html  generic_form.html  group_detail.html  group_list.html  index.html  login.html  navbar.html  not-found.html  post_detail.html  reply_chain.html  reply_detail.html  signup.html  user_detail.html
