[tool.poetry]
name = "saidit"
version = "0.1.0"
description = ""
authors = ["graeberj <graeberj88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-allauth = "^0.45.0"
django-mptt = "^0.13.4"
python-dotenv = "^0.19.1"
django-crispy-forms = "^1.13.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
